Bug 655238 - add "application/xslt+xml" as media type for XSLT, affects stylesheet loading both from processing instruction and HTTP Link header field, also adding it to the Accept header sent when fetching XSLTs. r=sicking